--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -26,4 +26,12 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.7.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
