--- a/plugins/spotify/pom.xml
+++ b/plugins/spotify/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.imagej/ij -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>[0.4, 0.5)</version>
+        </dependency>
+
     </dependencies>
 
 </project>
