add photo frame plugin add toools to interface module so that plugin can use it refine spotify plugin

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -16,6 +16,7 @@
         <module>blackscreen</module>
         <module>default-activity</module>
         <module>spotify</module>
+        <module>photo-frame</module>
     </modules>
     <groupId>com.ftpix.nowplaying</groupId>
     <artifactId>plugins</artifactId>
