--- a/plugins/photo-frame/pom.xml
+++ b/plugins/photo-frame/pom.xml
@@ -10,24 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ftpix.nowplaying</groupId>
-    <artifactId>spotify</artifactId>
-
+    <artifactId>photo-frame</artifactId>
     <dependencies>
+
         <dependency>
             <groupId>com.ftpix.nowplaying</groupId>
             <artifactId>interfaces</artifactId>
             <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.mashape.unirest</groupId>
-            <artifactId>unirest-java</artifactId>
-            <version>1.4.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.2</version>
         </dependency>
     </dependencies>
 
