add plex plugin add web page to view now playing

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -17,6 +17,7 @@
         <module>default-activity</module>
         <module>spotify</module>
         <module>photo-frame</module>
+        <module>plex</module>
     </modules>
     <groupId>com.ftpix.nowplaying</groupId>
     <artifactId>plugins</artifactId>
