add gran turismo plugin

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -19,6 +19,7 @@
         <module>photo-frame</module>
         <module>plex</module>
         <module>yamaha</module>
+        <module>gtsports</module>
     </modules>
     <groupId>com.ftpix.nowplaying</groupId>
     <artifactId>plugins</artifactId>
