--- a/web/pom.xml
+++ b/web/pom.xml
@@ -59,6 +59,11 @@
         </dependency>
         <dependency>
             <groupId>com.ftpix.nowplaying</groupId>
+            <artifactId>gtsports</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ftpix.nowplaying</groupId>
             <artifactId>photo-frame</artifactId>
             <version>${project.version}</version>
         </dependency>
