allow null content to be displayed add plex and spotifiy icon when content is null

--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -53,6 +53,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-transcoder</artifactId>
+            <version>1.9.1</version>
+        </dependency>
 
 
     </dependencies>
