--- a/web/docker/Dockerfile
+++ b/web/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM openjdk:10-jre
+FROM openjdk:12
 
-RUN apt-get install -y fonts-dejavu-extra fonts-dejavu-core
+#RUN apt-get install -y fonts-dejavu-extra fonts-dejavu-core
 COPY ./*.jar /usr/src/app/app.jar
 
 EXPOSE 4567
@@ -9,7 +9,7 @@ RUN mkdir /config
 WORKDIR /usr/src/app
 VOLUME /config
 VOLUME /mnt
+ENV JAVA_OPTS="-Xmx128m"
 
-
-CMD java -Dconfig.folder=/config -Xmx128M -jar app.jar
+CMD java -Dconfig.folder=/config  $JAVA_OPTS  -jar app.jar
 
