--- a/web/src/main/web/package.json
+++ b/web/src/main/web/package.json
@@ -4,32 +4,22 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "axios": "^0.16.2",
+    "fast-deep-equal": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "concurrently": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.11",
-    "http-server": "^0.10.0",
-    "less": "^3.0.4",
-    "less-loader": "^4.0.5",
-    "style-loader": "^0.18.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.14"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "less": "^3.10.3",
+    "parcel-bundler": "^1.12.3"
   },
   "scripts": {
-    "dev": "concurrently \"http-server ./public -p 5000 -c-1\" \"webpack -d --watch\"",
-    "build": "webpack -p"
+    "prebuild": "rm -rf ../resources/web/public",
+    "dev": "parcel src/index.html --out-dir ../resources/web/public",
+    "build": "parcel build  src/index.html --out-dir ../resources/web/public"
   },
   "author": "",
   "license": "ISC"
