--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,13 +18,13 @@
     </properties>
 
 
-    
+
 
     <dependencies>
         <dependency>
             <groupId>com.ftpix</groupId>
             <artifactId>sparknotation</artifactId>
-            <version>1.12</version>
+            <version>1.17</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.nowplaying</groupId>
@@ -45,6 +45,11 @@
         <dependency>
             <groupId>com.ftpix.nowplaying</groupId>
             <artifactId>blackscreen</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ftpix.nowplaying</groupId>
+            <artifactId>jellyfin</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -77,7 +82,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.2</version>
+            <version>2.9.0</version>
         </dependency>
 
         <dependency>
@@ -164,6 +169,7 @@
             </plugin>
 
 
+<!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -199,7 +205,7 @@
                             </arguments>
                         </configuration>
                     </execution>
-                    <!-- BUILD DOCKER IMAGE -->
+                    &lt;!&ndash; BUILD DOCKER IMAGE &ndash;&gt;
                     <execution>
                         <id>Docker build</id>
                         <goals>
@@ -220,6 +226,7 @@
                     </execution>
                 </executions>
             </plugin>
+-->
 
             <!--DOCKER -->
             <plugin>
@@ -253,6 +260,7 @@
                 </executions>
             </plugin>
 
+<!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -261,7 +269,7 @@
                     <workingDirectory>${basedir}/src/main/web</workingDirectory>
                 </configuration>
                 <executions>
-                    <!-- BUILD DOCKER IMAGE -->
+                    &lt;!&ndash; BUILD DOCKER IMAGE &ndash;&gt;
                     <execution>
                         <id>Docker build</id>
                         <goals>
@@ -298,6 +306,7 @@
                     </execution>
                 </executions>
             </plugin>
+-->
 
         </plugins>
     </build>
