--- a/web/src/main/web/package.json
+++ b/web/src/main/web/package.json
@@ -2,7 +2,6 @@
   "name": "sss",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
   "dependencies": {
     "fast-deep-equal": "^2.0.1",
     "react": "^16.0.0",
@@ -10,16 +9,19 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@parcel/babel-preset-env": "^2.5.0",
+    "@parcel/transformer-less": "^2.5.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "less": "^3.10.3",
-    "parcel-bundler": "^1.12.3"
+    "less": "^4.1.2",
+    "parcel": "^2.5.0",
+    "querystring-es3": "^0.2.1"
   },
   "scripts": {
     "prebuild": "rm -rf ../resources/web/public",
-    "dev": "parcel src/index.html --out-dir ../resources/web/public",
-    "build": "parcel build  src/index.html --out-dir ../resources/web/public"
+    "dev": "parcel src/index.html --dist-dir ../resources/web/public",
+    "build": "parcel build  src/index.html --dist-dir ../resources/web/public"
   },
   "author": "",
   "license": "ISC"
