add all inputs on yamaha amps

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:12
 
 #RUN apt-get install -y fonts-dejavu-extra fonts-dejavu-core
-COPY ./*.jar /usr/src/app/app.jar
+COPY ./target/web-*.jar /usr/src/app/app.jar
 
 EXPOSE 4567
 RUN mkdir /config
@@ -12,4 +12,3 @@ VOLUME /mnt
 ENV JAVA_OPTS="-Xmx128m"
 
 CMD java -Dconfig.folder=/config  $JAVA_OPTS  -jar app.jar
-
